--- a/Arreglos/Arreglos/Arreglos.csproj
+++ b/Arreglos/Arreglos/Arreglos.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{18918184-FA0F-463D-AC8A-817FB8BCC09E}</ProjectGuid>
+    <ProjectGuid>{D552C162-9439-47A8-AD84-E904D3CBFEB5}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Enumeraciones</RootNamespace>
-    <AssemblyName>Enumeraciones</AssemblyName>
+    <RootNamespace>Arreglos</RootNamespace>
+    <AssemblyName>Arreglos</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -45,7 +45,6 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Rol.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
